# telegram_advanced_search

./: .env.example  .gitignore  architecture.md  chat_list.py  indexer.py  prd.md  pyproject.toml  requirements.txt  searcher.py  setup_supabase.py  sync.py
.claude/: settings.local.json
.github/workflows/: ci.yml
archive/: CLAUDE_v1.md  README_v1.md  wbs_v1.md
desktop/: package.json  pnpm-lock.yaml
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: chat_list.rs  indexing.rs  mod.rs  search.rs
desktop/src/components/: ChatSelector.tsx  IndexingPanel.tsx  ResultList.tsx  SearchBar.tsx  SearchOptions.tsx
desktop/src/hooks/: useSearch.ts  useTauriCommand.ts
docs/: ARCHITECTURE.md  PRD.md  WBS.md  WORK_PROGRESS.md
lib/: __init__.py  db.py  supabase.py  telegram.py
tests/: __init__.py  test_chat_list.py  test_searcher.py  test_sync.py
